--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "webpack:watch": "webpack --watch --config webpack.dev.js",
-    "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize"
   },
   "devDependencies": {},
   "repository": {
