--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "express": "^4.17.1",
     "fibers": "^4.0.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.0",
