--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.6.3",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
+    "cors": "^2.8.5",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "fibers": "^4.0.1",
@@ -15,6 +16,7 @@
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "requirejs": "^2.3.6",
     "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
