--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "@tonejs/ui": "0.0.8",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
