--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "startaudiocontext": "^1.2.1",
     "style-loader": "^1.0.0",
     "tone": "^13.8.25",
+    "unmute": "^0.1.3",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
