--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "description": "Sea organ is audio synthesizer that uses tidal data to create immersive sound experience",
   "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@tonejs/ui": "0.0.8",
-    "autoprefixer": "^9.6.5",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.4.2",
     "express": "^4.17.1",
-    "fibers": "^4.0.1",
-    "mini-css-extract-plugin": "^0.8.0",
+    "fibers": "^4.0.2",
+    "mini-css-extract-plugin": "^0.8.2",
+    "minimist": "^1.2.5",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "requirejs": "^2.3.6",
-    "sass": "^1.23.0",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
     "startaudiocontext": "^1.2.1",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.1.3",
     "tone": "^13.8.25",
     "unmute": "^0.1.3",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "browserslist": [
