--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sea organ is audio synthesizer that uses tidal data to create immersive sound experience",
   "main": "index.js",
   "dependencies": {
+    "@babel/compat-data": "^7.11.0",
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@tonejs/ui": "0.0.8",
