--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mini-css-extract-plugin": "^0.8.2",
     "minimist": "^1.2.5",
     "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "requirejs": "^2.3.6",
